[package]
name = "phyloEvolve"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "variant analyzer for human genomics"
homepage = "https://github.com/rustcodepro/phyloevolve"
repository = "https://github.com/rustcodepro/phyloevolve"

[dependencies]
charts = "0.3.0"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
figlet-rs = "0.1.5"
futures = "0.3.31"
plotters = "0.3.7"
rayon = "1.10.0"
tokio = { version = "1.47.1", features = ["full"] }
